# ideas

./: .gitignore  PRD.md  TODO.md  requirements.txt
docs/: api-reference.md  dev_plan.md
mcp-server/: OPENCODE_CONFIG.md  README.md  pyproject.toml  requirements.txt  server.py
mcp-server/src/ideas_mcp/: __init__.py  server.py
src/ideas/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
src/ideas/routers/: agent.py  ideas.py  web_auth.py
src/ideas/static/: add.html  index.html  login.html
tests/: conftest.py  test_api.py  test_models.py
